--- a/MyMonee-Final/Views/AddHomeViewController.xib
+++ b/MyMonee-Final/Views/AddHomeViewController.xib
@@ -79,7 +79,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="Jej-93-bii"/>
                     </constraints>
-                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="25"/>
                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kategori Penggunaan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LdB-cJ-IAV">
