--- a/MyMonee-Final/Views/HomeDetailViewController.xib
+++ b/MyMonee-Final/Views/HomeDetailViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -21,6 +21,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeDetailViewController" customModule="MyMonee_Final" customModuleProvider="target">
             <connections>
+                <outlet property="button" destination="EHy-TC-0DY" id="HAD-K1-UyP"/>
                 <outlet property="dateTransaction" destination="6kh-XI-ETh" id="ScF-k8-ZhS"/>
                 <outlet property="titleTransaction" destination="3Bl-uF-5er" id="ucf-ho-2Ul"/>
                 <outlet property="transactionPrice" destination="ATx-sc-tjR" id="KeR-1v-w6q"/>
@@ -32,84 +33,85 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5V7-0Q-nlL" userLabel="Edit">
-                    <rect key="frame" x="361" y="64" width="36" height="36"/>
+                    <rect key="frame" x="322" y="20" width="36" height="36"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="5V7-0Q-nlL" secondAttribute="height" multiplier="1:1" id="mCt-90-PeQ"/>
                     </constraints>
                     <state key="normal" image="Update"/>
+                    <connections>
+                        <action selector="edit:" destination="-1" eventType="touchUpInside" id="WXI-JU-Tfw"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XR7-dj-bNx">
-                    <rect key="frame" x="0.0" y="119.5" width="414" height="777.5"/>
+                    <rect key="frame" x="0.0" y="75.5" width="375" height="626.5"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EHy-TC-0DY">
-                            <rect key="frame" x="20" y="673" width="374" height="30"/>
+                            <rect key="frame" x="20" y="522" width="335" height="43"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="30" id="aAa-qG-WdQ"/>
+                                <constraint firstAttribute="height" constant="43" id="aAa-qG-WdQ"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="14"/>
                             <state key="normal" title="Kembali">
                                 <color key="titleColor" red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                    <integer key="value" value="3"/>
-                                </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                    <integer key="value" value="20"/>
-                                </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="color" keyPath="layer.backgroundColor">
-                                    <color key="value" red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="back:" destination="-1" eventType="touchUpInside" id="oC4-VR-yiK"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID Pembuatan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lb6-Ge-ufg">
-                            <rect key="frame" x="17" y="208.5" width="190" height="20"/>
+                            <rect key="frame" x="17" y="173.5" width="170.5" height="20"/>
                             <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="14"/>
                             <color key="textColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tanggal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQA-8g-G3f">
-                            <rect key="frame" x="17" y="240.5" width="190" height="20"/>
+                            <rect key="frame" x="17" y="205.5" width="170.5" height="20"/>
                             <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="14"/>
                             <color key="textColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;ID&gt;" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ehn-AZ-aEA">
-                            <rect key="frame" x="207" y="208.5" width="190" height="20"/>
+                            <rect key="frame" x="187.5" y="173.5" width="170.5" height="20"/>
                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                             <color key="textColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Tanggal&gt;" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6kh-XI-ETh">
-                            <rect key="frame" x="207" y="240.5" width="190" height="20"/>
+                            <rect key="frame" x="187.5" y="205.5" width="170.5" height="20"/>
                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                             <color key="textColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;type transaction&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MTQ-Df-7Xt">
-                            <rect key="frame" x="151" y="84.5" width="112" height="17"/>
+                            <rect key="frame" x="131.5" y="84.5" width="112" height="17"/>
                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                             <color key="textColor" red="0.50980392156862742" green="0.50980392156862742" blue="0.50980392156862742" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;title transaction&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Bl-uF-5er">
-                            <rect key="frame" x="123.5" y="55" width="167" height="25.5"/>
+                            <rect key="frame" x="104" y="55" width="167" height="25.5"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="25.5" id="rsX-JS-Nn3"/>
+                            </constraints>
                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="18"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;price&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATx-sc-tjR">
-                            <rect key="frame" x="162" y="109.5" width="90" height="34"/>
+                            <rect key="frame" x="142.5" y="109.5" width="90" height="34"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="34" id="6YA-64-YWf"/>
+                            </constraints>
                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="24"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XFq-RK-BcR">
-                            <rect key="frame" x="178" y="-27" width="58" height="58"/>
+                            <rect key="frame" x="158.5" y="-27" width="58" height="58"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="58" id="Nry-N9-cRp"/>
                                 <constraint firstAttribute="height" constant="58" id="ufr-9b-NPl"/>
@@ -118,7 +120,7 @@
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="Lb6-Ge-ufg" firstAttribute="top" secondItem="ATx-sc-tjR" secondAttribute="bottom" constant="65" id="0VQ-bI-Vmk"/>
+                        <constraint firstItem="Lb6-Ge-ufg" firstAttribute="top" secondItem="ATx-sc-tjR" secondAttribute="bottom" constant="30" id="0VQ-bI-Vmk"/>
                         <constraint firstItem="Ehn-AZ-aEA" firstAttribute="top" secondItem="Lb6-Ge-ufg" secondAttribute="top" id="3GG-W3-rfb"/>
                         <constraint firstItem="3Bl-uF-5er" firstAttribute="top" secondItem="XR7-dj-bNx" secondAttribute="top" constant="55" id="4Dc-xy-Ifh"/>
                         <constraint firstItem="3Bl-uF-5er" firstAttribute="top" secondItem="XFq-RK-BcR" secondAttribute="bottom" constant="24" id="5Ou-NZ-lHr"/>
@@ -133,6 +135,7 @@
                         <constraint firstItem="Lb6-Ge-ufg" firstAttribute="width" secondItem="Ehn-AZ-aEA" secondAttribute="width" id="SCh-na-CIh"/>
                         <constraint firstItem="Lb6-Ge-ufg" firstAttribute="height" secondItem="Ehn-AZ-aEA" secondAttribute="height" id="SGb-Z0-4Ag"/>
                         <constraint firstItem="iQA-8g-G3f" firstAttribute="width" secondItem="6kh-XI-ETh" secondAttribute="width" id="TIl-aq-Dan"/>
+                        <constraint firstItem="iQA-8g-G3f" firstAttribute="width" secondItem="Lb6-Ge-ufg" secondAttribute="width" id="TsI-MN-sy1"/>
                         <constraint firstItem="6kh-XI-ETh" firstAttribute="top" secondItem="iQA-8g-G3f" secondAttribute="top" id="fVI-VF-dkL"/>
                         <constraint firstAttribute="trailing" secondItem="6kh-XI-ETh" secondAttribute="trailing" constant="17" id="gPb-eM-grk"/>
                         <constraint firstItem="MTQ-Df-7Xt" firstAttribute="top" secondItem="3Bl-uF-5er" secondAttribute="bottom" constant="4" id="iaO-05-cDa"/>
@@ -144,6 +147,7 @@
                         <constraint firstItem="EHy-TC-0DY" firstAttribute="leading" secondItem="XR7-dj-bNx" secondAttribute="leading" constant="20" id="tif-Jw-Hyt"/>
                         <constraint firstItem="Lb6-Ge-ufg" firstAttribute="leading" secondItem="XR7-dj-bNx" secondAttribute="leading" constant="17" id="uAe-9g-2EB"/>
                         <constraint firstItem="XFq-RK-BcR" firstAttribute="centerX" secondItem="XR7-dj-bNx" secondAttribute="centerX" id="x8O-tI-Sbg"/>
+                        <constraint firstItem="iQA-8g-G3f" firstAttribute="height" secondItem="Lb6-Ge-ufg" secondAttribute="height" id="yPL-CM-WI2"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -161,7 +165,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="XR7-dj-bNx" secondAttribute="bottom" constant="-35" id="dTc-de-7ms"/>
                 <constraint firstItem="XR7-dj-bNx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="kN4-NI-iPB"/>
                 <constraint firstItem="5V7-0Q-nlL" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20.210000000000001" id="nmN-SF-7Yh"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="EHy-TC-0DY" secondAttribute="bottom" constant="39.5" id="oYS-KU-pFw"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="EHy-TC-0DY" secondAttribute="bottom" constant="26.5" id="oYS-KU-pFw"/>
             </constraints>
             <point key="canvasLocation" x="111.59420289855073" y="84.375"/>
         </view>
