--- a/MyMonee-Final/Views/TableViewCells/HomeTableViewCell.xib
+++ b/MyMonee-Final/Views/TableViewCells/HomeTableViewCell.xib
@@ -87,6 +87,7 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <gestureRecognizers/>
             <connections>
                 <outlet property="dateAndTime" destination="VhP-Ar-F1a" id="79h-Ap-tUz"/>
                 <outlet property="homeTableViewCell" destination="H2p-sc-9uM" id="IOh-y1-jeX"/>
