--- a/MyMonee-Final/Views/HomeViewController.xib
+++ b/MyMonee-Final/Views/HomeViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="landscape" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -35,32 +35,32 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pT8-XS-HFo">
-                    <rect key="frame" x="44" y="0.0" width="808" height="393"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Msc-Qr-7vK" userLabel="Content View">
-                            <rect key="frame" x="0.0" y="0.0" width="808" height="568"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2kR-Ur-p98" userLabel="Greeting View">
-                                    <rect key="frame" x="16" y="16" width="776" height="61"/>
+                                    <rect key="frame" x="16" y="16" width="382" height="61"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selamat &lt;CurrentTime&gt;," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KW-RS-1Xv" userLabel="Greeting">
-                                            <rect key="frame" x="0.0" y="0.0" width="740" height="36"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="346" height="36"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="24"/>
                                             <color key="textColor" name="4F4F4F"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Your Name&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wt8-nV-2TT" userLabel="User Name">
-                                            <rect key="frame" x="0.0" y="40" width="740" height="17"/>
+                                            <rect key="frame" x="0.0" y="40" width="346" height="17"/>
                                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                                             <color key="textColor" name="828282"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Insert" translatesAutoresizingMaskIntoConstraints="NO" id="u6O-7O-L0C">
-                                            <rect key="frame" x="740" y="0.0" width="36" height="36"/>
+                                            <rect key="frame" x="346" y="0.0" width="36" height="36"/>
                                             <gestureRecognizers/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="u6O-7O-L0C" secondAttribute="height" multiplier="1:1" id="Xl1-Qy-jaS"/>
@@ -86,16 +86,16 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kj5-Ml-wRx" userLabel="Balance View">
-                                    <rect key="frame" x="16" y="101" width="776" height="103.5"/>
+                                    <rect key="frame" x="16" y="101" width="382" height="103.5"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" ambiguous="YES" text="Total Saldo Kamu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0NB-tQ-yJD">
-                                            <rect key="frame" x="14" y="14" width="748" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Total Saldo Kamu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0NB-tQ-yJD">
+                                            <rect key="frame" x="14" y="14" width="354" height="20"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="14"/>
                                             <color key="textColor" name="FFFFFF"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Rp. &lt;net amout&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wqg-Iv-uTb" userLabel="balance">
-                                            <rect key="frame" x="14" y="36" width="748" height="50.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rp. &lt;net amout&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wqg-Iv-uTb" userLabel="balance">
+                                            <rect key="frame" x="14" y="36" width="354" height="50.5"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="36"/>
                                             <color key="textColor" name="FFFFFF"/>
                                             <nil key="highlightedColor"/>
@@ -119,7 +119,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6KV-cH-eYB" userLabel="Last Deposit View">
-                                    <rect key="frame" x="16" y="216.5" width="378" height="47"/>
+                                    <rect key="frame" x="16" y="216.5" width="186" height="47"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow_Up" translatesAutoresizingMaskIntoConstraints="NO" id="jTH-jn-O7J">
                                             <rect key="frame" x="15.5" y="15" width="15.5" height="16"/>
@@ -128,13 +128,13 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uang Masuk" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNa-R0-XEf">
-                                            <rect key="frame" x="42" y="5" width="320.5" height="14"/>
+                                            <rect key="frame" x="42" y="5" width="128.5" height="17"/>
                                             <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="12"/>
                                             <color key="textColor" name="828282"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;last Depo&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zaq-Rz-xVa" userLabel="amount">
-                                            <rect key="frame" x="42" y="28" width="320.5" height="13"/>
+                                            <rect key="frame" x="42" y="25.5" width="128.5" height="15.5"/>
                                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="11"/>
                                             <color key="textColor" name="5069B8"/>
                                             <nil key="highlightedColor"/>
@@ -160,7 +160,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zq2-Zy-S0Q" userLabel="Last Withdraw View">
-                                    <rect key="frame" x="414" y="216.5" width="378" height="47"/>
+                                    <rect key="frame" x="212" y="216.5" width="186" height="47"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow_Down" translatesAutoresizingMaskIntoConstraints="NO" id="C0U-Yj-Xyc">
                                             <rect key="frame" x="15.5" y="15" width="15.5" height="16"/>
@@ -169,13 +169,13 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uang Keluar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OR0-91-rke">
-                                            <rect key="frame" x="42" y="5" width="320.5" height="14"/>
+                                            <rect key="frame" x="42" y="5" width="128.5" height="17"/>
                                             <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="12"/>
                                             <color key="textColor" name="828282"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;last Withdraw&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OWS-GF-D2Q" userLabel="amount">
-                                            <rect key="frame" x="42" y="28" width="320.5" height="13"/>
+                                            <rect key="frame" x="42" y="25.5" width="128.5" height="15.5"/>
                                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="11"/>
                                             <color key="textColor" name="5069B8"/>
                                             <nil key="highlightedColor"/>
@@ -201,18 +201,18 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KlF-EO-Tw5" customClass="EmptyDataHistory" customModule="MyMonee_Final" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="309.5" width="808" height="258.5"/>
+                                    <rect key="frame" x="0.0" y="309.5" width="414" height="508.5"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3T0-V0-GjC" userLabel="History View">
-                                    <rect key="frame" x="0.0" y="309.5" width="808" height="258.5"/>
+                                    <rect key="frame" x="0.0" y="309.5" width="414" height="508.5"/>
                                     <subviews>
                                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ICi-xc-tZW">
-                                            <rect key="frame" x="17" y="58" width="774" height="191.5"/>
+                                            <rect key="frame" x="17" y="61.5" width="380" height="438"/>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         </tableView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Riwayat Penggunaan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qWE-LL-Aus">
-                                            <rect key="frame" x="17" y="23" width="151.5" height="19"/>
+                                            <rect key="frame" x="17" y="23" width="175" height="22.5"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="16"/>
                                             <color key="textColor" name="000000"/>
                                             <nil key="highlightedColor"/>
@@ -255,16 +255,17 @@
                                 <constraint firstItem="6KV-cH-eYB" firstAttribute="top" secondItem="Kj5-Ml-wRx" secondAttribute="bottom" constant="12" id="k3x-Kb-buS"/>
                                 <constraint firstItem="3T0-V0-GjC" firstAttribute="leading" secondItem="Msc-Qr-7vK" secondAttribute="leading" id="lZy-G3-90R"/>
                                 <constraint firstAttribute="bottom" secondItem="3T0-V0-GjC" secondAttribute="bottom" id="nTl-Nb-pIz"/>
-                                <constraint firstAttribute="height" constant="568" id="rFR-2D-k5L"/>
+                                <constraint firstAttribute="height" constant="818" id="rFR-2D-k5L"/>
                                 <constraint firstAttribute="bottom" secondItem="KlF-EO-Tw5" secondAttribute="bottom" id="zQn-Vd-9DO"/>
                             </constraints>
                         </view>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="Msc-Qr-7vK" firstAttribute="leading" secondItem="MF2-r7-mdZ" secondAttribute="leading" id="8dk-RF-698"/>
                         <constraint firstItem="Msc-Qr-7vK" firstAttribute="top" secondItem="pT8-XS-HFo" secondAttribute="top" id="C6i-4p-yao"/>
                         <constraint firstAttribute="bottom" secondItem="Msc-Qr-7vK" secondAttribute="bottom" id="FMp-AY-fKg"/>
+                        <constraint firstItem="Msc-Qr-7vK" firstAttribute="height" secondItem="pT8-XS-HFo" secondAttribute="height" priority="250" id="Ljh-SZ-D9E"/>
                         <constraint firstItem="Msc-Qr-7vK" firstAttribute="leading" secondItem="pT8-XS-HFo" secondAttribute="leading" id="Rav-DY-mNH"/>
-                        <constraint firstItem="Msc-Qr-7vK" firstAttribute="height" secondItem="pT8-XS-HFo" secondAttribute="height" priority="250" id="TWs-ZO-SAn"/>
                         <constraint firstAttribute="trailing" secondItem="Msc-Qr-7vK" secondAttribute="trailing" id="YXf-zZ-MOQ"/>
                         <constraint firstItem="Msc-Qr-7vK" firstAttribute="width" secondItem="pT8-XS-HFo" secondAttribute="width" id="hlk-EP-MXs"/>
                     </constraints>
@@ -280,7 +281,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="pT8-XS-HFo" secondAttribute="bottom" id="i0b-Ow-s9W"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pT8-XS-HFo" secondAttribute="trailing" id="snQ-wg-lEt"/>
             </constraints>
-            <point key="canvasLocation" x="-151.33928571428569" y="440.57971014492756"/>
+            <point key="canvasLocation" x="-152.17391304347828" y="439.95535714285711"/>
         </view>
         <tapGestureRecognizer id="Jbl-eS-qa3">
             <connections>
